--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
   <div class="main">
     <div class="container">
       <a href="index.html"><div class="main__logo"></div></a>
-      <div class="main__title">ВЫВЕСТИ БИЗНЕС НА СЛЕДУЮЩИЙ УРОВЕНЬ </div>
+      <div class="main__title">ВЫВЕСТИ БИЗНЕС НА СЛЕДУЮЩИЙ УРОВЕНЬ</div>
       <div class="mian__game game">
         <div class="game__title">НАЧАТЬ ИГРУ</div>
-        <a href="emailto:123123123" class="game__link game__link-no">НЕ ЗНАЮ ЧЕГО ХОЧУ</a>
-        <a href="emailto:123123123" class="game__link game__link-yes">ЗНАЮ ЧЕГО ХОЧУ</a>
+        <div class="game__wrap game__wrap-brif">
+          <a href="emailto:123123123" class="game__link game__link-no">НЕ ЗНАЮ ЧЕГО ХОЧУ</a>
+        </div>
+        <div class="game__wrap game__wrap-consult">
+          <a href="emailto:123123123" class="game__link game__link-yes">ЗНАЮ ЧЕГО ХОЧУ</a>
+        </div>
       </div>
     </div>
   </div>
